--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -24,19 +24,13 @@
   weight = 40
 
 [[main]]
-  name = "Accomplishments"
-  url = "#accomplishments"
-  weight = 50
-
-[[main]]
   name = "Blog"
   url = "https://estija.github.io/blog/"
-  weight = 60
-
+  weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/resume.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "media/resume.pdf"
-#    weight = 70
+[[main]]
+  name = "CV"
+  url = "media/BhavyaResume.pdf"
+  weight = 60
