--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -25,7 +25,7 @@
 
 [[main]]
   name = "Blog"
-  url = "[https://estija.github.io/blog/](https://estija.github.io/blog/)"
+  url = "blog/"
   weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
