--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,7 +10,7 @@ title = "Bhavya Vasudeva"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https:/estija.github.io/"
+baseurl = ""
 #canonifyURLs="false"
 #relativeURLs="false"
 
