--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,8 +10,8 @@ title = "Bhavya Vasudeva"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = ""
-#canonifyURLs="false"
+baseurl = "https:/estija.github.io/"
+canonifyURLs="false"
 #relativeURLs="false"
 
 # Enter a copyright notice to display in the site footer.
