--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -32,5 +32,5 @@
 # To enable, copy your resume/CV to `static/media/resume.pdf` and uncomment the lines below.
 [[main]]
   name = "CV"
-  url = "/media/BhavyaResume.pdf"
+  url = "/media/bhavyaresume.pdf"
   weight = 60
