--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,10 +8,10 @@
   url = "/#about"
   weight = 10
 
-[[main]]
-  name = "News"
-  url = "/#news"
-  weight = 20
+#[[main]]
+#  name = "News"
+#  url = "/#news"
+#  weight = 20
 
 [[main]]
   name = "Publications"
@@ -23,10 +23,10 @@
   url = "/#projects"
   weight = 40
 
-[[main]]
-  name = "Blog"
-  url = "/blog/"
-  weight = 50
+#[[main]]
+#  name = "Blog"
+#  url = "/blog/"
+#  weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/resume.pdf` and uncomment the lines below.
